Version 2.0 * Added support for XL, X2Large, and X3Large * Added functionality to reload images and galleries on demand.   These are cached once hit and the cache is held hourly to increase   performance on large galleries.  Users have requested the ability   to reload this cache on demand * Added functionality to uncheck images once inserted into a post.   Before, the same images just inserted would still be checked   if a user selected to add more images.  However, the settings will still remain. * Added the ability to set the default image alignment in the settings tab * Fixed an issue which occurred when a user selected a gallery from the   drop down in the media browser, but then chose "Select Gallery".   The system would throw an error before * Added ability to select all images from the media chooser SmugMug Embed form * If a gallery had a hidden image, then the plugin would not embed any   image after the hidden image.  This is resolved * SME now respects the SmugMug hidden flag on photos * SME now has the ablitity to create shortcode that will use Wordpress's out of the box galleries style * Added a progress indicator on several events in the Embed from SmugMug form
git-svn-id: https://plugins.svn.wordpress.org/smugmug-embed/trunk@1132085 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -31,7 +31,8 @@
     z-index: 75;
     background: none repeat scroll 0% 0% rgb(245, 245, 245);
     border-left: 1px solid rgb(223, 223, 223);
-    overflow: auto;
+    overflow: scroll;
+	margin-bottom:47px;
 }
 
 .SME_media-frame-toolbar {
@@ -173,6 +174,7 @@
     font-size: 14px;
     line-height: 20px;
     font-weight: bold;
+	margin-top: 5px;
 }
 
 .SME_media-selection {
@@ -185,12 +187,12 @@
     overflow: hidden;
     white-space: nowrap;
 }
-.SME_media-selection .SME_clear-selection {
+.SME_media-selection .SME_clear-selection ,.SME_ClearCache{
     color: red;
     text-decoration:none;
 
 }
-.SME_media-selection .SME_clear-selection:hover {
+.SME_media-selection .SME_clear-selection:hover , ,.SME_ClearCache:hover{
     color: white;
     background-color:red;
 
